--- a/css/index/footer.css
+++ b/css/index/footer.css
@@ -97,7 +97,7 @@ footer .social img {
 
 footer .social img:hover {
 
-    background-color: #eee;
+    background-color: #99999933;
 }
 
 footer .social img:active {
